# eyearticle-pro

./: .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml
dashboard/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
design-system/ophthalmoagent/: MASTER.md
design-system/ophthalmoagent/pages/: dashboard.md
src/: api.py  config.py  engine.py  main.py  storage.py
src/download/: __init__.py  downloader.py  validator.py
src/extract/: __init__.py  caption_matcher.py  extractor.py
src/llm/: __init__.py  gemini.py  prompts.py  validator.py
src/output/: __init__.py  assembler.py  converter.py
src/output/templates/: resumo.md.j2
